# MonopropUAV

./: .gitignore
Algorithms/LosslessConvexification/rust_lossless/src/: lossless.rs  main.rs
Algorithms/MPC/: Cargo.toml
Algorithms/MPC/src/: mpc_crate.rs
Algorithms/MTV Sim/: pid_tuning_runner.py
Algorithms/RocketSimulation/rust_rocket_sim/: Cargo.toml  flight_data.csv  simulation.csv
Algorithms/RocketSimulation/rust_rocket_sim/src/: algorithms.rs  device_sim.rs  fluid_dynamics.rs  main.rs  rocket_dynamics.rs  simulation.rs
Lander/: Cargo.toml  README.md  flight_log.mcap
Lander/src/: algorithms.rs  control_loop.rs  fsm.rs  lib.rs  main.rs  mcap_logger.rs  state.rs
Lander/src/algorithms/: control.rs  guidance.rs  mod.rs  navigator.rs  rcs.rs  sensor_fusion.rs
Lander/src/fsm/: actuator.rs  autopilot.rs  mod.rs  scheduler.rs
Sensing&Controls/AttitudeEstimation/rust-ekf/: Cargo.toml  ES_EKF.md  README.md
Sensing&Controls/AttitudeEstimation/rust-ekf/src/: lib.rs
Sensing&Controls/AttitudeEstimation/rust-ekf/src/es-ekf/: filter.rs
Sensing&Controls/AttitudeEstimation/rust-ekf/src/es_ekf/: filter.rs  mod.rs  model.rs
Sensing&Controls/AttitudeEstimation/rust-ekf/src/models/: full_state_esekf.rs  gps.rs  imu_integrated_position.rs  lidar.rs  mod.rs
Sensing&Controls/AttitudeEstimation/rust-ekf/src/testing/: ekf_attitude_gif.py  ekf_eval.py  esekf_fault_output.csv  esekf_fault_test.rs  esekf_output.csv  esekf_test.rs  plot_esekf.py  plot_esekf_faults.py
