[package]
name = "rust_rocket_sim"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "rust_rocket_sim"
path = "src/main.rs"

[dependencies]
rerun = "0.28"
nalgebra = "0.32"
clarabel = "0.7"
rand = "0.9"
rand_distr = "0.5"
ndarray = "0.15"
optimization_engine = "0.6.0"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
csv = "1.4.0"
serde = { version = "1", features = ["derive"] }
Lander = { path = "../../../Lander" }
rust_lossless = { path = "../../../Algorithms/LosslessConvexification/rust_lossless" }
openblas-src = { version = "0.10", features = ["rustls"] }

